responsive done till counter section

--- a/index.html
+++ b/index.html
@@ -206,29 +206,30 @@
 
     <!--Counter section-->
     <section class="cnter-sec text-center">
-        <div class="container">
-            <div class="col">
-                <div class="row d-flex justify-content-center align-items-center pl-3 pr-3">
-                    <ul>
+        <div class="container d-flex justify-content-center">
+            <div class="col-3 col-md-12">
+                <div
+                    class="row text-left text-md-center d-flex justify-content-center align-items-center flex-column flex-md-row pl-0 pr-0 pl-md-3 pr-md-3">
+                    <ul class="d-flex align-items-center justify-content-center flex-row flex-md-column">
                         <li class="cnter-num counter">41</li>
                         <li class="cnter-title">WEB DESIGN PROJECTS</li>
                     </ul>
 
-                    <ul>
+                    <ul class="d-flex align-items-center justify-content-center flex-row flex-md-column">
                         <li class="cnter-num counter">123</li>
                         <li class="cnter-title">HAPPY CLIENTS</li>
                     </ul>
 
-                    <ul>
+                    <ul class="d-flex align-items-center justify-content-center flex-row flex-md-column">
                         <li class="cnter-num counter">15</li>
                         <li class="cnter-title">AWARD WINNER</li>
                     </ul>
 
-                    <ul>
+                    <ul class="d-flex align-items-center justify-content-center flex-row flex-md-column">
                         <li class="cnter-num counter">99</li>
                         <li class="cnter-title">CUP OF COFFEE</li>
                     </ul>
-                    <ul>
+                    <ul class="d-flex align-items-center justify-content-center flex-row flex-md-column">
                         <li class="cnter-num counter">24</li>
                         <li class="cnter-title">MEMBERS</li>
                     </ul>
