responsive done till service section

--- a/index.html
+++ b/index.html
@@ -207,29 +207,29 @@
     <!--Counter section-->
     <section class="cnter-sec text-center">
         <div class="container d-flex justify-content-center">
-            <div class="col-3 col-md-12">
+            <div class="col-12 col-md-12">
                 <div
-                    class="row text-left text-md-center d-flex justify-content-center align-items-center flex-column flex-md-row pl-0 pr-0 pl-md-3 pr-md-3">
-                    <ul class="d-flex align-items-center justify-content-center flex-row flex-md-column">
+                    class="row t text-center d-flex justify-content-center align-items-center flex-row flex-md-row pl-0 pr-0 pl-md-3 pr-md-3">
+                    <ul class="d-flex align-items-center justify-content-center flex-column">
                         <li class="cnter-num counter">41</li>
                         <li class="cnter-title">WEB DESIGN PROJECTS</li>
                     </ul>
 
-                    <ul class="d-flex align-items-center justify-content-center flex-row flex-md-column">
+                    <ul class="d-flex align-items-center justify-content-center flex-column">
                         <li class="cnter-num counter">123</li>
                         <li class="cnter-title">HAPPY CLIENTS</li>
                     </ul>
 
-                    <ul class="d-flex align-items-center justify-content-center flex-row flex-md-column">
+                    <ul class="d-flex align-items-center justify-content-center flex-column">
                         <li class="cnter-num counter">15</li>
                         <li class="cnter-title">AWARD WINNER</li>
                     </ul>
 
-                    <ul class="d-flex align-items-center justify-content-center flex-row flex-md-column">
+                    <ul class="d-flex align-items-center justify-content-center flex-column">
                         <li class="cnter-num counter">99</li>
                         <li class="cnter-title">CUP OF COFFEE</li>
                     </ul>
-                    <ul class="d-flex align-items-center justify-content-center flex-row flex-md-column">
+                    <ul class="d-flex align-items-center justify-content-center flex-column">
                         <li class="cnter-num counter">24</li>
                         <li class="cnter-title">MEMBERS</li>
                     </ul>
@@ -248,102 +248,109 @@
                     <p>We work with</p>
                     <h1>Amazing Services</h1>
                 </div>
-                <div class="srvc-cnt sec-inr-padding col-12">
+                <div class="srvc-cnt sec-inr-padding">
 
-                    <div class="p-2">
-                        <div class="srvc-itm-wrp d-flex justify-content-center">
-                            <div class="srvc-singl-wrp text-left col-4 p-2">
-                                <div class="srvc-singl d-flex justify-content-start align-items-start flex-row">
-                                    <div class="srvc-sin-icn">
-                                        <i class="fas fa-camera-retro"></i>
-                                    </div>
-                                    <div class="srvc-sin-txt">
-                                        <h6>Photography</h6>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                            tempor.
-                                        </p>
-                                    </div>
+
+                    <div
+                        class="col-12 srvc-itm-wrp d-flex justify-content-center align-items-center flex-wrap pt-0 pt-md-4">
+
+                        <div class="srvc-singl-wrp col-12 col-md-4 col-lg-4 pt-3 pt-md-0">
+                            <div
+                                class="srvc-singl d-flex justify-content-start align-items-center align-items-md-start flex-column flex-md-row">
+                                <div class="srvc-sin-icn pb-3 pb-md-0">
+                                    <i class="fas fa-camera-retro"></i>
                                 </div>
-                            </div>
-
-                            <div class="srvc-singl-wrp text-left col-4 p-2">
-                                <div class="srvc-singl d-flex justify-content-start align-items-start flex-row">
-                                    <div class="srvc-sin-icn">
-                                        <i class="fas fa-laptop-code"></i>
-                                    </div>
-                                    <div class="srvc-sin-txt">
-                                        <h6>web design</h6>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                            tempor.
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="srvc-singl-wrp text-left col-4 p-2">
-                                <div class="srvc-singl d-flex justify-content-start align-items-start flex-row">
-                                    <div class="srvc-sin-icn">
-                                        <i class="fas fa-pencil-ruler"></i>
-                                    </div>
-                                    <div class="srvc-sin-txt">
-                                        <h6>creativity</h6>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                            tempor.
-                                        </p>
-                                    </div>
+                                <div class="srvc-sin-txt text-center text-md-left pl-5 pr-5 pl-md-4 pr-md-4">
+                                    <h6>Photography</h6>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                                        tempor.
+                                    </p>
                                 </div>
                             </div>
                         </div>
 
+                        <div class="srvc-singl-wrp col-12 col-md-4 col-lg-4 pt-5 pt-md-0">
+                            <div
+                                class="srvc-singl d-flex justify-content-start align-items-center align-items-md-start flex-column flex-md-row">
+                                <div class="srvc-sin-icn pb-3 pb-md-0">
+                                    <i class="fas fa-laptop-code"></i>
+                                </div>
+                                <div class="srvc-sin-txt text-center text-md-left pl-5 pr-5 pl-md-4 pr-md-4">
+                                    <h6>web design</h6>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                                        tempor.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="srvc-singl-wrp col-12 col-md-4 col-lg-4 pt-5 pt-md-0">
+                            <div
+                                class="srvc-singl d-flex justify-content-start align-items-center align-items-md-start flex-column flex-md-row">
+                                <div class="srvc-sin-icn pb-3 pb-md-0">
+                                    <i class="fas fa-pencil-ruler"></i>
+                                </div>
+                                <div class="srvc-sin-txt text-center text-md-left pl-5 pr-5 pl-md-4 pr-md-4">
+                                    <h6>creativity</h6>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                                        tempor.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+
                         <div class="divider col-12"></div>
-                        <div>
-                            <div class="srvc-itm-wrp d-flex justify-content-center">
-                                <div class="srvc-singl-wrp text-left col-4 p-2">
-                                    <div class="srvc-singl d-flex justify-content-start align-items-start flex-row">
-                                        <div class="srvc-sin-icn">
-                                            <i class="fas fa-book-open"></i>
-                                        </div>
-                                        <div class="srvc-sin-txt">
-                                            <h6>seo</h6>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                                tempor.
-                                            </p>
-                                        </div>
-                                    </div>
-                                </div>
 
-                                <div class="srvc-singl-wrp text-left col-4 p-2">
-                                    <div class="srvc-singl d-flex justify-content-start align-items-start flex-row">
-                                        <div class="srvc-sin-icn">
-                                            <i class="fas fa-code"></i>
-                                        </div>
-                                        <div class="srvc-sin-txt">
-                                            <h6>css/html</h6>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                                tempor.
-                                            </p>
-                                        </div>
-                                    </div>
-                                </div>
 
-                                <div class="srvc-singl-wrp text-left col-4">
-                                    <div class="srvc-singl d-flex justify-content-start align-items-start flex-row">
-                                        <div class="srvc-sin-icn">
-                                            <i class="fas fa-th-large"></i>
-                                        </div>
-                                        <div class="srvc-sin-txt">
-                                            <h6>digital</h6>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                                tempor.
-                                            </p>
-                                        </div>
-                                    </div>
+                        <div class="srvc-singl-wrp col-12 col-md-4 col-lg-4 pt-3 pt-md-0">
+                            <div
+                                class="srvc-singl d-flex justify-content-start align-items-center align-items-md-start flex-column flex-md-row">
+                                <div class="srvc-sin-icn pb-3 pb-md-0">
+                                    <i class="fas fa-book-open"></i>
+                                </div>
+                                <div class="srvc-sin-txt text-center text-md-left pl-5 pr-5 pl-md-4 pr-md-4">
+                                    <h6>seo</h6>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                                        tempor.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="srvc-singl-wrp col-12 col-md-4 col-lg-4 pt-5 pt-md-0">
+                            <div
+                                class="srvc-singl d-flex justify-content-start align-items-center align-items-md-start flex-column flex-md-row">
+                                <div class="srvc-sin-icn pb-3 pb-md-0">
+                                    <i class="fas fa-code"></i>
+                                </div>
+                                <div class="srvc-sin-txt text-center text-md-left pl-5 pr-5 pl-md-4 pr-md-4">
+                                    <h6>css/html</h6>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                                        tempor.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="srvc-singl-wrp col-12 col-md-4 col-lg-4 pt-5 pt-md-0">
+                            <div
+                                class="srvc-singl d-flex justify-content-start align-items-center align-items-md-start flex-column flex-md-row">
+                                <div class="srvc-sin-icn pb-3 pb-md-0">
+                                    <i class="fas fa-th-large"></i>
+                                </div>
+                                <div class="srvc-sin-txt text-center text-md-left pl-5 pr-5 pl-md-4 pr-md-4">
+                                    <h6>digital</h6>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                                        tempor.
+                                    </p>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
     </section>
     <!--Service section-->
 
