--- a/index.html
+++ b/index.html
@@ -381,8 +381,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 sec-title">
-                    <p>What we do</p>
-                    <h1>Story about us</h1>
+                    <p>Service</p>
+                    <h1>what we do</h1>
                 </div>
                 <div class="wt-we-do-cnt sec-inr-padding">
                     <div class="sec-inr-txt col-12">
@@ -392,12 +392,12 @@
                             laboris nisi ut aliquip ex ea commodo consequat. </p>
                     </div>
 
-                    <div class="col-12 d-flex flex-row">
-                        <div class="col-6">
-                            <img src="images/what-we-do.png" alt="what we do" class="img-fluid">
+                    <div class="col-12 d-flex flex-column flex-md-row">
+                        <div class="col-12 col-md-6 pb-4 pb-lg-0">
+                            <img src=" images/what-we-do.png" alt="what we do" class="img-fluid">
                         </div>
 
-                        <div class="col-6 text-left">
+                        <div class="col-12 col-md-6 text-left">
                             <div class="accordion" id="accordion1">
                                 <div class="acrdn-title">
                                     <a class="btn btn-link d-flex align-items-center" type="button">
@@ -489,17 +489,17 @@
             <!--Custom arrow-->
             <button class="slick-cs-prev"><i class="fas fa-chevron-left"></i></button>
             <button class="slick-cs-next"><i class="fas fa-chevron-right"></i></button>
-            <div class="qts-wrap row justify-content-center">
+            <div class="qts-wrap row d-flex justify-content-center">
 
                 <!--Single item start-->
                 <div class="qts-single d-flex justify-content-center">
-                    <div class="col-10 d-flex align-items-center">
-                        <div class="qts-icn text-center">
+                    <div class="col-10 text-center text-md-left d-flex align-items-center flex-column flex-md-row">
+                        <div class="qts-icn text-center pb-3 pb-md-0">
                             <span class="d-flex align-items-center justify-content-center">
                                 <i class="fas fa-envelope-open-text"></i>
                             </span>
                         </div>
-                        <div class="qts-cnt">
+                        <div class="qts-cnt pl-0 pl-md-5">
                             <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                                 incididunt ut
                                 labore et dolore magna aliqua. Ut enim ad min veniam, quis nostrud exercitation.”</p>
@@ -511,16 +511,16 @@
 
                 <!--Single item start-->
                 <div class="qts-single d-flex justify-content-center">
-                    <div class="col-10 d-flex align-items-center">
-                        <div class="qts-icn text-center">
+                    <div class="col-10 text-center text-md-left d-flex align-items-center flex-column flex-md-row">
+                        <div class="qts-icn text-center pb-3 pb-md-0">
                             <span class="d-flex align-items-center justify-content-center">
                                 <i class="fas fa-envelope-open-text"></i>
                             </span>
                         </div>
-                        <div class="qts-cnt">
+                        <div class="qts-cnt pl-0 pl-md-5">
                             <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                                 incididunt ut
-                                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.”</p>
+                                labore et dolore magna aliqua. Ut enim ad min veniam, quis nostrud exercitation.”</p>
                             <h6>Jon Doe</h6>
                         </div>
                     </div>
@@ -723,14 +723,12 @@
             <button class="slick-cs2-next"><i class="fas fa-chevron-right"></i></button>
             <div class="testimoni-wrap row justify-content-center">
                 <!--Single item start-->
-                <div class="testimoni-single d-flex justify-content-center">
-                    <div class="col-10 d-flex align-items-center">
-                        <div class="testimoni-icn text-center">
-                            <span class="d-flex align-items-center justify-content-center">
-                                <i class="fas fa-envelope-open-text"></i>
-                            </span>
+                <div class="qts-single d-flex justify-content-center">
+                    <div class="col-10 text-center text-md-left d-flex align-items-center flex-column flex-md-row">
+                        <div class="qts-icn text-center pb-4 pb-md-0">
+                            <img src="images/testimoni-person.png" alt="testimonial" class="img-fluid">
                         </div>
-                        <div class="testimoni-cnt">
+                        <div class="qts-cnt pl-0 pl-md-5">
                             <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                                 incididunt ut
                                 labore et dolore magna aliqua. Ut enim ad min veniam, quis nostrud exercitation.”</p>
@@ -741,17 +739,15 @@
                 <!--Single item end-->
 
                 <!--Single item start-->
-                <div class="testimoni-single d-flex justify-content-center">
-                    <div class="col-10 d-flex align-items-center">
-                        <div class="testimoni-icn text-center">
-                            <span class="d-flex align-items-center justify-content-center">
-                                <i class="fas fa-envelope-open-text"></i>
-                            </span>
+                <div class="qts-single d-flex justify-content-center">
+                    <div class="col-10 text-center text-md-left d-flex align-items-center flex-column flex-md-row">
+                        <div class="qts-icn text-center pb-4 pb-md-0">
+                            <img src="images/testimoni-person.png" alt="testimonial" class="img-fluid">
                         </div>
-                        <div class="testimoni-cnt">
+                        <div class="qts-cnt pl-0 pl-md-5">
                             <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                                 incididunt ut
-                                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.”</p>
+                                labore et dolore magna aliqua. Ut enim ad min veniam, quis nostrud exercitation.”</p>
                             <h6>Jon Doe</h6>
                         </div>
                     </div>
