--- a/index.html
+++ b/index.html
@@ -548,11 +548,10 @@
                             laboris nisi ut aliquip ex ea commodo consequat. </p>
                     </div>
 
-                    <div class="team-itm-wrp d-flex justify-content-center">
-                        <div class="team-singl-wrp col-4">
-                            <div class="team-singl">
-                                <img src="images/team-1.png" alt="story1" class="img-fluid">
-
+                    <div class="team-itm-wrp d-flex justify-content-center flex-column flex-md-row">
+                        <div class="team-singl-wrp col-12 col-md-4 mb-5 mb-md-0">
+                            <div class="team-singl m-auto">
+                                <img src=" images/team-1.png" alt="story1" class="img-fluid">
                                 <ul class="team-social">
                                     <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                                     <li><a href="#"><i class="fab fa-twitter"></i></a></li>
@@ -567,8 +566,8 @@
                             </div>
                         </div>
 
-                        <div class="team-singl-wrp col-4">
-                            <div class="team-singl">
+                        <div class="team-singl-wrp col-12 col-md-4 mb-5 mb-md-0">
+                            <div class="team-singl m-auto">
                                 <img src="images/team-2.png" alt="story1" class="img-fluid">
                                 <ul class="team-social">
                                     <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
@@ -583,8 +582,8 @@
                             </div>
                         </div>
 
-                        <div class="team-singl-wrp col-4">
-                            <div class="team-singl">
+                        <div class="team-singl-wrp col-12 col-md-4 mb-5 mb-md-0">
+                            <div class="team-singl m-auto">
                                 <img src="images/team-3.png" alt="story1" class="img-fluid">
                                 <ul class="team-social">
                                     <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
@@ -636,9 +635,9 @@
             </div>
         </div>
 
-        <div class="showcase-itm-wrp d-flex justify-content-center">
+        <div class="showcase-itm-wrp d-flex justify-content-center flex-wrap">
 
-            <div class="col-3">
+            <div class="col-12 col-md-3 d-flex flex-row flex-md-column">
                 <div class="showcase-img">
                     <img src="images/showcase-1.png" alt="work" class="img-fluid">
                     <div class="showcase-img-title">
@@ -657,7 +656,7 @@
                 </div>
             </div>
 
-            <div class="col-3">
+            <div class="col-12 col-md-3 d-flex flex-row flex-md-column">
                 <div class="showcase-img">
                     <img src="images/showcase-3.png" alt="work" class="img-fluid">
                     <div class="showcase-img-title">
@@ -674,10 +673,9 @@
                         <p>Lorem ipsum dolor sit</p>
                     </div>
                 </div>
-
             </div>
 
-            <div class="col-3">
+            <div class="col-12 col-md-3">
                 <div class="showcase-img">
                     <img src="images/showcase-5.png" alt="work" class="img-fluid">
                     <div class="showcase-img-title">
@@ -689,7 +687,7 @@
 
             </div>
 
-            <div class="col-3">
+            <div class="col-12 col-md-3 d-flex flex-row flex-md-column">
                 <div class="showcase-img">
                     <img src="images/showcase-6.png" alt="work" class="img-fluid">
                     <div class="showcase-img-title">
@@ -764,14 +762,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 sec-title">
-                    <p>We work with</p>
-                    <h1>Amazing Services</h1>
+                    <p>Happy Clients</p>
+                    <h1>What people say</h1>
                 </div>
                 <div class="wps-cnt sec-inr-padding col-12">
 
                     <div class="p-2">
                         <div class="wps-itm-wrp d-flex justify-content-center flex-wrap">
-                            <div class="wps-singl-wrp text-left col-6 p-3">
+                            <div class="wps-singl-wrp text-left col-12 col-md-6 p-3">
                                 <div class="wps-singl d-flex justify-content-start align-items-start flex-row">
                                     <div class="wps-sin-img">
                                         <img src="images/people-1.png" alt="people">
@@ -787,7 +785,7 @@
                                 </div>
                             </div>
 
-                            <div class="wps-singl-wrp text-left col-6 p-3">
+                            <div class="wps-singl-wrp text-left col-12 col-md-6 p-3">
                                 <div class="wps-singl d-flex justify-content-start align-items-start flex-row">
                                     <div class="wps-sin-img">
                                         <img src="images/people-2.png" alt="people">
@@ -803,7 +801,7 @@
                                 </div>
                             </div>
 
-                            <div class="wps-singl-wrp text-left col-6 p-3">
+                            <div class="wps-singl-wrp text-left col-12 col-md-6 p-3">
                                 <div class="wps-singl d-flex justify-content-start align-items-start flex-row">
                                     <div class="wps-sin-img">
                                         <img src="images/people-3.png" alt="people">
@@ -819,7 +817,7 @@
                                 </div>
                             </div>
 
-                            <div class="wps-singl-wrp text-left col-6 p-3">
+                            <div class="wps-singl-wrp text-left col-12 col-md-6 p-3">
                                 <div class="wps-singl d-flex justify-content-start align-items-start flex-row">
                                     <div class="wps-sin-img">
                                         <img src="images/people-4.png" alt="people">
@@ -859,8 +857,8 @@
                             laboris nisi ut aliquip ex ea commodo consequat. </p>
                     </div>
 
-                    <div class="blog-itm-wrp d-flex justify-content-center">
-                        <div class="blog-singl-wrp col-4 text-left">
+                    <div class="blog-itm-wrp d-flex justify-content-center align-items-center flex-wrap">
+                        <div class="blog-singl-wrp col-10 col-md-4 text-left pb-5 pb-md-0">
                             <div class="blog-singl">
                                 <div class="blog-singl-img">
                                     <img src="images/blog-1.png" alt="story1" class="img-fluid">
@@ -883,7 +881,7 @@
                             </div>
                         </div>
 
-                        <div class="blog-singl-wrp col-4 text-left">
+                        <div class="blog-singl-wrp col-10 col-md-4 text-left pb-5 pb-md-0">
                             <div class="blog-singl">
                                 <div class="blog-singl-img">
                                     <img src="images/blog-2.png" alt="story1" class="img-fluid">
@@ -906,7 +904,7 @@
                             </div>
                         </div>
 
-                        <div class="blog-singl-wrp col-4 text-left">
+                        <div class="blog-singl-wrp col-10 col-md-4 text-left pb-4 pb-md-0">
                             <div class="blog-singl">
                                 <div class="blog-singl-img">
                                     <img src="images/blog-3.png" alt="story1" class="img-fluid">
@@ -952,8 +950,8 @@
     <!--Footer section-->
     <footer class="sec-padding">
         <div class="container">
-            <div class="col-12 d-flex flex-row">
-                <div class="ftr-cnt col-5">
+            <div class="col-12 d-flex flex-column flex-md-row">
+                <div class="ftr-cnt col-12 col-md-6 col-lg-5">
                     <a href="index.html" class="navbar-brand">MoGo</a>
                     <p class="ftr-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                         incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
@@ -962,16 +960,16 @@
 
                     <p class="lk-count"><span>15k</span> followers</p>
                     <div class="divider"></div>
-                    <ul class="ftr-scl-link nav">
+                    <ul class="ftr-scl-link nav align-items-center">
                         <li>Follow Us:</li>
-                        <li><i class="fab fa-facebook-f"></i></li>
-                        <li><i class="fab fa-twitter"></i></li>
-                        <li><i class="fab fa-instagram"></i></li>
-                        <li><i class="fab fa-pinterest-p"></i></li>
-                        <li><i class="fab fa-google-plus-g"></i></li>
-                        <li><i class="fab fa-youtube"></i></li>
-                        <li><i class="fab fa-dribbble"></i></li>
-                        <li><i class="fab fa-behance"></i></li>
+                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
+                        <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
+                        <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+                        <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
+                        <li><a href="#"><i class="fab fa-behance"></i></a></li>
                     </ul>
 
                     <form action="" class="ftr-form d-flex align-items-center">
@@ -979,14 +977,14 @@
                         <input type="submit" value="SUBSCRIBE">
                     </form>
                 </div>
-                <div class="col-4 ftr-blog">
+                <div class="col-12 ftr-blog col-md-3 col-lg-4 pt-5 pt-md-0">
                     <div class="ftr-blog-title">
                         <h6>Blogs</h6>
                     </div>
                     <div class="ftr-blog-wrp">
-                        <div class="ftr-blog-singl d-flex align-items-center">
+                        <div class="ftr-blog-singl d-flex align-items-start align-items-md-start align-items-lg-start">
                             <div class="ftr-blog-img">
-                                <img src="images/footer-blog-1.png" alt="blog">
+                                <img src="images/footer-blog-1.png" alt="blog" class="img-fluid">
                             </div>
                             <div class="ftr-blog-cnt">
                                 <h6>Lorem ipsum dolor sit amet,
@@ -995,9 +993,10 @@
                             </div>
                         </div>
 
-                        <div class="ftr-blog-singl d-flex align-items-center">
+                        <div
+                            class="ftr-blog-singl d-flex align-items-center align-items-md-start align-items-lg-center">
                             <div class="ftr-blog-img">
-                                <img src="images/footer-blog-2.png" alt="blog">
+                                <img src="images/footer-blog-2.png" alt="blog" class="img-fluid">
                             </div>
                             <div class="ftr-blog-cnt">
                                 <h6>Lorem ipsum dolor sit amet,
@@ -1006,9 +1005,10 @@
                             </div>
                         </div>
 
-                        <div class="ftr-blog-singl d-flex align-items-center">
+                        <div
+                            class="ftr-blog-singl d-flex align-items-center align-items-md-start align-items-lg-center">
                             <div class="ftr-blog-img">
-                                <img src="images/footer-blog-3.png" alt="blog">
+                                <img src="images/footer-blog-3.png" alt="blog" class="img-fluid">
                             </div>
                             <div class="ftr-blog-cnt">
                                 <h6>Lorem ipsum dolor sit amet,
@@ -1020,7 +1020,7 @@
                     </div>
 
                 </div>
-                <div class="col-3 ftr-insta">
+                <div class="col-12 ftr-insta col-md-3 col-lg-3 pt-5 pt-md-0">
                     <div class="ftr-insta-title">
                         <h6>Instagram</h6>
                     </div>
