fixed responsive issues

--- a/index.html
+++ b/index.html
@@ -982,7 +982,7 @@
                         <h6>Blogs</h6>
                     </div>
                     <div class="ftr-blog-wrp">
-                        <div class="ftr-blog-singl d-flex align-items-start align-items-md-start align-items-lg-start">
+                        <div class="ftr-blog-singl d-flex align-items-start">
                             <div class="ftr-blog-img">
                                 <img src="images/footer-blog-1.png" alt="blog" class="img-fluid">
                             </div>
@@ -993,8 +993,7 @@
                             </div>
                         </div>
 
-                        <div
-                            class="ftr-blog-singl d-flex align-items-center align-items-md-start align-items-lg-center">
+                        <div class="ftr-blog-singl d-flex align-items-start">
                             <div class="ftr-blog-img">
                                 <img src="images/footer-blog-2.png" alt="blog" class="img-fluid">
                             </div>
@@ -1005,8 +1004,7 @@
                             </div>
                         </div>
 
-                        <div
-                            class="ftr-blog-singl d-flex align-items-center align-items-md-start align-items-lg-center">
+                        <div class="ftr-blog-singl d-flex align-items-start">
                             <div class="ftr-blog-img">
                                 <img src="images/footer-blog-3.png" alt="blog" class="img-fluid">
                             </div>
