--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
 
 
 <body>
+
+    <!--Preloader-->
+    <div id="preloader">
+        <div id="loader"></div>
+    </div>
+    <!--Preloader-->
+
     <!--Header section-->
     <header class="fixed-top d-flex align-items-center">
         <div class="container">
